--- a/.github/workflows/digger_workflow.yml
+++ b/.github/workflows/digger_workflow.yml
@@ -37,6 +37,7 @@ jobs:
           setup-aws: true
           aws-role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: us-west-2
+          configure-checkout: false
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
