try: explicit plan

--- a/digger.yml
+++ b/digger.yml
@@ -2,3 +2,9 @@ projects:
   - name: aws/bootstrap
     dir: tofu/aws/bootstrap
     opentofu: true
+workflows:
+  default:
+    plan:
+      steps:
+        - init
+        - plan
