--- a/.github/workflows/digger_workflow.yml
+++ b/.github/workflows/digger_workflow.yml
@@ -38,6 +38,8 @@ jobs:
           aws-role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: us-west-2
           configure-checkout: false
+          upload-plan-destination: aws
+          upload-plan-destination-s3-bucket: homelabv2-tf-state-20250402193806856500000001
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
