try: force ipv4

--- a/.github/workflows/digger_workflow.yml
+++ b/.github/workflows/digger_workflow.yml
@@ -40,3 +40,4 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GODEBUG: "netdns=go+v4" # force ipv4
